# compressonator

./: .gitignore  CMakeLists.txt  readme.md
applications/_libs/cmp_math/: CMakeLists.txt  cmp_math_common.cpp  cmp_math_common.h  cpu_extensions.cpp  jrtcommon.h
applications/_plugins/common/: atiformats.cpp  atiformats.h  codec_common.cpp  format_conversion.cpp  texture_utils.cpp
cmp_compressonatorlib/: CMakeLists.txt  cmp_common.h  compress.cpp  compressonator.cpp  compressonator.h  compressonatorlib.def
cmp_compressonatorlib/apc/: apc_decode.cpp  apc_definitions.h  apc_encode.cpp  codec_apc.cpp  codec_apc.h
cmp_compressonatorlib/atc/: codec_atc.cpp  codec_atc_rgb.cpp  codec_atc_rgb.h  codec_atc_rgba_explicit.cpp  codec_atc_rgba_explicit.h  codec_atc_rgba_interpolated.cpp  codec_atc_rgba_interpolated.h
cmp_compressonatorlib/ati/: codec_ati1n.cpp  codec_ati1n.h  codec_ati2n.cpp  codec_ati2n.h  codec_ati2n_dxt5.cpp  codec_ati2n_dxt5.h  compressonatori_tc.c  compressonatorxcodec.cpp  compressonatorxcodec.h
cmp_compressonatorlib/basis/: codec_basis.cpp  codec_basis.h
cmp_compressonatorlib/bc6h/: bc6h_decode.cpp  bc6h_encode.cpp  bc6h_utils.h  codec_bc6h.cpp  codec_bc6h.h
cmp_compressonatorlib/bc7/: 3dquant_vpc.cpp  bc7_decode.cpp  bc7_encode.cpp  bc7_partitions.cpp  codec_bc7.cpp  codec_bc7.h
cmp_compressonatorlib/block/: codec_block.cpp  codec_block_4x4.cpp  codec_block_8x8.cpp
cmp_compressonatorlib/buffer/: codecbuffer.cpp  codecbuffer.h  codecbuffer_block.cpp  codecbuffer_r16.cpp  codecbuffer_r16f.cpp  codecbuffer_r32.cpp  codecbuffer_r32f.cpp  codecbuffer_r8.cpp  codecbuffer_r8s.cpp  codecbuffer_rg16.cpp  codecbuffer_rg16f.cpp  codecbuffer_rg32.cpp  codecbuffer_rg32f.cpp  codecbuffer_rg8.cpp  codecbuffer_rg8s.cpp  codecbuffer_rgb888.cpp  codecbuffer_rgb888s.cpp  codecbuffer_rgb9995ef.cpp  codecbuffer_rgba1010102.cpp  codecbuffer_rgba16.cpp  codecbuffer_rgba16f.cpp  codecbuffer_rgba2101010.cpp  codecbuffer_rgba32.cpp  codecbuffer_rgba32f.cpp  codecbuffer_rgba8888.cpp  codecbuffer_rgba8888s.cpp
cmp_compressonatorlib/common/: atiformats.cpp  atiformats.h  codec.cpp  codec.h  codec_common.cpp  codec_common.h  compclient.h  compress.h  debug.h  texture.h
cmp_compressonatorlib/dxt/: codec_dxt1.cpp  codec_dxt1.h  codec_dxt3.cpp  codec_dxt3.h  codec_dxt5.cpp  codec_dxt5.h  codec_dxt5_rbxg.cpp  codec_dxt5_rgxb.cpp  codec_dxt5_rxbg.cpp  codec_dxt5_swizzled.cpp  codec_dxt5_swizzled.h  codec_dxt5_xgbr.cpp  codec_dxt5_xgxr.cpp  codec_dxt5_xrbg.cpp
cmp_compressonatorlib/dxtc/: codec_dxtc.cpp  codec_dxtc.h  codec_dxtc_alpha.cpp  codec_dxtc_rgba.cpp
cmp_compressonatorlib/etc/: codec_etc.cpp  codec_etc.h  codec_etc2_rgb.cpp  codec_etc2_rgb.h  codec_etc2_rgba.cpp  codec_etc2_rgba.h  codec_etc2_rgba1.cpp  codec_etc2_rgba1.h  codec_etc_rgb.cpp  codec_etc_rgb.h  codec_etc_rgba_explicit.cpp  codec_etc_rgba_explicit.h  codec_etc_rgba_interpolated.cpp  codec_etc_rgba_interpolated.h
cmp_compressonatorlib/etc/etcpack/: etcimage.cxx  etcpack.cxx
cmp_compressonatorlib/gt/: codec_gt.cpp  codec_gt.h  gt_decode.cpp  gt_definitions.h  gt_encode.cpp
cmp_core/: CMakeLists.txt
cmp_core/shaders/: bc1_cmp.h  bc1_encode_kernel.cpp  bc2_encode_kernel.cpp  bc3_encode_kernel.cpp  bc4_encode_kernel.cpp  bc5_encode_kernel.cpp  bc6_encode_kernel.cpp  bc6_encode_kernel.h  bc7_encode_kernel.cpp  bcn_common_api.h  bcn_common_kernel.h  brlg_encode_kernel.cpp  common_def.h
cmp_core/source/: cmp_core.h  cmp_math_common.cpp  cmp_math_common.h  cmp_math_vec4.h  core_simd_sse.cpp  cpu_extensions.cpp
cmp_framework/common/: cmp_boxfilter.cpp  cmp_mips.cpp  cmp_mips.h  hdr_encode.cpp
